WIP build server protocol integration